syntax = "proto3";
package zkp_auth;

service Auth {
    rpc Register (RegisterRequest) returns (RegisterReply);

    rpc CreateAuthenticationChallenge (AuthenticationChallengeRequest) returns (AuthenticationChallengeReply);

    rpc VerifyAuthentication (VerifyAuthenticationRequest) returns (VerifyAuthenticationReply);
}

message Committs {
    bytes y1 = 3;
    bytes y2 = 4;
}

message RegisterRequest {
    string username = 1;
    Committs committs = 2;
}

message RegisterReply {
    bool result = 1;
}

message AuthenticationChallengeRequest {
    string username = 1;
    string authentication_request_id = 2;
}

message AuthenticationChallengeReply {
    bytes challenge = 1;
}

message VerifyAuthenticationRequest {
    string username = 1;
    string authentication_request_id = 2;
    bytes answer = 3;
}

message VerifyAuthenticationReply {
    bool result = 1;
}
